<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.marcinmilkowski</groupId>
    <artifactId>concept-sketch</artifactId>
    <version>1.5.0</version>
    <packaging>jar</packaging>

    <name>ConceptSketch</name>
    <description>High-performance corpus-based collocation analysis tool with semantic field exploration</description>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <blacklab.version>4.0.0</blacklab.version>
        <jackson.version>2.17.2</jackson.version>
        <junit.version>5.9.0</junit.version>
        <junit.platform.version>1.9.0</junit.platform.version>
    </properties>

    <dependencies>
        <!-- BlackLab Core - corpus query engine with CoNLL-U dependency support -->
        <!-- Install first: ./install-blacklab.sh or .\install-blacklab.ps1 -->
        <dependency>
            <groupId>nl.inl.blacklab</groupId>
            <artifactId>blacklab-engine</artifactId>
            <version>${blacklab.version}</version>
        </dependency>

        <!-- BlackLab Query Parser - CQL parser used directly in BlackLabQueryExecutor -->
        <dependency>
            <groupId>nl.inl.blacklab</groupId>
            <artifactId>blacklab-query-parser</artifactId>
            <version>${blacklab.version}</version>
        </dependency>

        <!-- JSON Processing -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.7</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
        </dependency>

    </dependencies>

    <repositories>
        <!-- Maven Central -->
        <repository>
            <id>central</id>
            <name>Maven Central Repository</name>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>
        <!-- UFAL Repository for UDPipe -->
        <repository>
            <id>ufal</id>
            <name>UFAL Maven Repository</name>
            <url>https://ufal.mff.cuni.cz/maven2</url>
        </repository>
        <!-- BlackLab 4.x is NOT published to Maven Central (latest on Central is 3.0.1).
             REQUIRED FIRST STEP: run ./install-blacklab.sh (Linux/macOS) or
             .\install-blacklab.ps1 (Windows) before building. The script installs the JARs
             into your local ~/.m2 repository so Maven resolves them without any remote call.

             CI ENFORCEMENT: install-blacklab.sh must be a CI pre-step. Any pipeline that
             skips it will fail at dependency resolution with a clear "artifact not found" error.

             FALLBACK (last resort only): activate the `blacklab-github-fallback` Maven profile
             defined below. That profile registers the GitHub raw-content URL as a repository.
             The URL has no SLA and may become unavailable (rate-limited, branch deleted, or
             repo renamed); do NOT rely on it in production CI.

             Long-term alternatives if the raw URL breaks:
               - Mirror to a private registry (Nexus / Artifactory / GitHub Packages)
               - Track Maven Central: https://search.maven.org/search?q=g:nl.inl.blacklab -->
    </repositories>

    <!--
      Last-resort fallback repository profile for BlackLab.
      Activate only when ./install-blacklab.sh cannot be run:
        mvn -P blacklab-github-fallback clean package
      DO NOT enable this profile in standard CI.
    -->
    <profiles>
        <profile>
            <id>blacklab-github-fallback</id>
            <repositories>
                <repository>
                    <id>blacklab-github</id>
                    <name>BlackLab GitHub Raw Repository (fallback, no SLA)</name>
                    <url>https://raw.githubusercontent.com/instituutnederlandsetaal/BlackLab/mvn-repo/</url>
                    <releases>
                        <enabled>true</enabled>
                        <checksumPolicy>warn</checksumPolicy>
                    </releases>
                    <snapshots>
                        <enabled>false</enabled>
                    </snapshots>
                </repository>
            </repositories>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <!--
                  This project uses com.sun.net.httpserver, the public API of the named module
                  jdk.httpserver. The package is exported and fully supported in Java 21 with no
                  add-exports or add-opens required.
                  TODO: consider migrating to Undertow or Jetty if a multi-module build,
                  custom classloader environment, or EE-style deployment is ever needed.
                -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>pl.marcinmilkowski.word_sketch.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>pl.marcinmilkowski.word_sketch.Main</mainClass>
                                </transformer>
                                <!-- Merge Lucene SPI service files for codecs -->
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
